fixed issue-62